2004-05-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* imap.el (imap-authenticators): Comment out sasl.

	* message.el (message-skip-to-next-address): New function.
	(message-fill-header-address): Refactor.
	(message-fill-address): Use it.
	(message-delete-address): Use it.
	(message-fill-header-general): Refactor.
	(message-fill-field-address): Rename.
	(message-narrow-to-field): Find the start of the header. 
	(message-header-format-alist): Don't pre-fill.
	(message-fill-header): Removed.
	(message-insert-header): New function.
	(message-shorten-references): Use it.

	* rfc2047.el (rfc2047-field-value): Strip props.

	* mail-parse.el (mail-header-make-address): New alias.

	* ietf-drums.el (ietf-drums-make-address): New function.

	* imap.el: Add compiler directives.

	* gnus-score.el (gnus-score-edit-done): run-hook->run-hooks. 

	* gnus-art.el (article-decode-idna-rhs): Don't use
	message-idna-inside-rhs-p. 

2004-05-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-idna-inside-rhs-p): Removed.
	(message-idna-to-ascii-rhs-1): Use proper address parsing.

	* gnus-art.el (gnus-emphasis-alist): Removed strikethru; too many
	false positives.

2004-05-16  Kim Minh Kaplan  <kmkaplan-AwwS6Bc0PDVoiYX5Tdu9fQ@public.gmane.org>

	* imap.el (imap-sasl-make-mechanisms): Use sasl. 

2004-05-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nneething.el (nneething-file-name): Don't create spurions
	files. 

	* gnus-msg.el (gnus-inews-do-gcc): Ignore read-only groups. 
	(gnus-inews-do-gcc): Remove sleep.

	* gnus-art.el (gnus-mime-delete-part): Error message when no MIME
	part under point.

	* gnus-agent.el (gnus-agent-synchronize-flags): Default to nil. 
	(gnus-agent-regenerate-group): Using nil messages aren't valid. 

2004-05-15  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-summary-prepare-exit): oops, forgot (length)

2004-05-14  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-dup.el (gnus-dup-unsuppress-article): don't assume the mail